# python-scrap-fastapi

./: .gitignore  README.md  alembic.ini  cli.py  pyproject.toml
alembic/: env.py
api/: jobs.py  main.py
models/: __init__.py  database.py  job_listing.py  schemas.py
scheduler/: __init__.py  tasks.py
scraper/: __init__.py  ai_service.py  daijob.py  gaijinpot.py  tokyodev.py  wantedly.py
scratch/: bs4_test.py  http_test.py  sqlmodel_models_vs_schemas_demo.py  wantedly_test.py
tests/: test_jobs.py
